--- a/work4_designcafe/index.html
+++ b/work4_designcafe/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
 
   <body>
@@ -29,13 +31,27 @@
             <li><a href="#access">ACCESS</a></li>
           </ul>
         </nav>
+
+        <div class="sp-menu-btn"><span></span></div>
+        <nav class="header-nav-sp">
+          <ul>
+            <li><a href="#about">ABOUT US</a></li>
+            <li><a href="#menu">MENU</a></li>
+            <li><a href="#gallery">GALLERY</a></li>
+            <li><a href="#event">EVENT</a></li>
+            <li><a href="#access">ACCESS</a></li>
+          </ul>
+        </nav>
       </div>
       <!-- MV -->
       <div class="slider">
-        <img src="./images/pc_first-100.jpg" alt="カフェ店内の様子" />
-      </div>
-      <div class="sp_img">
-        <img src="./images/sp_main_vs@2x-100.jpg" alt="カフェ店内の様子">
+        <picture>
+          <source
+            srcset="./images/sp_main_vs@2x-100.jpg"
+            media="(max-width: 767px)"
+          />
+          <img src="./images/pc_first-100.jpg" alt="カフェ店内の様子" />
+        </picture>
       </div>
     </header>
 
@@ -57,20 +73,35 @@
     <!-- about -->
     <div class="about-container">
       <section class="about section" id="about">
+        <!-- sp ver. タイトル -->
+        <div class="about-text-area-sp">
+          <div class="section-ttl-about-sp">
+            <img
+              src="./images/about_us@2x.png"
+              alt="私たちが提供するこだわりのコーヒー"
+            />
+          </div>
+        </div>
+        <!-- /sp ver. タイトル -->
+
         <div class="about-wrap">
           <h2 class="about-main-img">
-            <img src="./images/pc_about-100.jpg" alt="私たちについて" />
-          </h2>
-          
-          <div class="about-text-area">
-            <div class="section-ttl-about">
-              <img
-                src="./images/about_us@2x.png"
-                alt="私たちが提供するこだわりのコーヒー"
+            <picture>
+              <source
+                srcset="./images/about_us@2x-100.jpg"
+                media="(max-width: 767px)"
               />
-            </div>
-            <div class="sp_img">
-              <img src="./images/about_us@2x-100.jpg" alt="私たちが提供するこだわりのコーヒー">
+              <img src="./images/pc_about-100.jpg" alt="私たちについて" />
+            </picture>
+          </h2>
+          <div class="about-text-wrap">
+            <div class="about-text-area">
+              <div class="section-ttl-about">
+                <img
+                  src="./images/about_us@2x.png"
+                  alt="私たちが提供するこだわりのコーヒー"
+                />
+              </div>
             </div>
             <p class="about-text-main">
               <span>私たちが提供する</span><br />
@@ -98,11 +129,13 @@
                 alt="ドリンク見本"
                 class="menu-img"
               />
-              <img
-                src="./images/drink-txt.png"
-                alt="ドリンク"
-                class="menu-ttl-img"
-              />
+              <div class="menu-ttl-img">
+                <img
+                  src="./images/drink-txt.png"
+                  alt="ドリンク"
+                  class="menu-ttl-img"
+                />
+              </div>
               <p class="menu-text">
                 ドリンクメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
               </p>
@@ -114,11 +147,14 @@
                 alt="フード見本"
                 class="menu-img"
               />
-              <img
-                src="./images/food-txt.png"
-                alt="フード"
-                class="menu-ttl-img"
-              />
+              <div class="menu-ttl-img">
+                <img
+                  src="./images/food-txt.png"
+                  alt="フード"
+                  class="menu-ttl-img"
+                />
+              </div>
+
               <p class="menu-text">
                 フードメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
               </p>
@@ -130,11 +166,13 @@
                 alt="スイーツ見本"
                 class="menu-img"
               />
+              <div class="menu-ttl-img">
               <img
                 src="./images/sweets-txt.png"
                 alt="スイーツ"
                 class="menu-ttl-img"
               />
+              </div>
               <p class="menu-text">
                 スイーツメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
               </p>
@@ -180,19 +218,27 @@
           <ul class="event-list">
             <li class="event-contents">
               <p class="event-date">2020.06.23</p>
-              <p class="event-text">7月はイベント出店のため0/0お休みします</p>
+              <a href="#"
+                ><p class="event-text">
+                  7月はイベント出店のため0/0お休みします
+                </p></a
+              >
             </li>
             <li class="event-contents">
               <p class="event-date">2020.03.15</p>
-              <p class="event-text">
-                春の新商品新発売。話題のあのブランドとコラボ
-              </p>
+              <a href="#"
+                ><p class="event-text">
+                  春の新商品新発売。話題のあのブランドとコラボ
+                </p></a
+              >
             </li>
             <li class="event-contents">
               <p class="event-date">2020.02.06</p>
-              <p class="event-text">
-                コーヒーの日で30％OFFイベントを開催［3日間限定］
-              </p>
+              <a href="#"
+                ><p class="event-text">
+                  コーヒーの日で30％OFFイベントを開催［3日間限定］
+                </p></a
+              >
             </li>
           </ul>
         </div>
@@ -226,14 +272,23 @@
         <p class="shop-information">
           OPEN 18:00 / CLOSE 24:00<br />
           〒150-0022<br />
-          東京都渋谷区東京南123デザインビルB1<br />
+          <span>東京都渋谷区東京南123</span><span>デザインビルB1</span><br />
           MAIL：info@designcafe.tokyo
         </p>
       </div>
       <div class="footer-top-page">
-        <img src="./images/to_top@2x.png" alt="" />
+        <a href="#header"><img src="./images/to_top@2x.png" alt="" /> </a>
       </div>
       <p class="copy-right">&commat; 2021 DESIGN CAFE</p>
     </footer>
+
+    <script>
+      $(function () {
+        $(".sp-menu-btn").on("click", function () {
+          $(".sp-menu-btn").toggleClass("open");
+          $(".header-nav-sp").fadeToggle();
+        });
+      });
+    </script>
   </body>
 </html>
