--- a/work4_designcafe/index.html
+++ b/work4_designcafe/index.html
@@ -6,9 +6,22 @@
     <title>デザインカフェ</title>
 
     <link rel="stylesheet" href="./css/reset.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
 
+    <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- slick -->
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
 
   <body>
@@ -32,6 +45,7 @@
           </ul>
         </nav>
 
+        <!-- humメニュー -->
         <div class="sp-menu-btn"><span></span></div>
         <nav class="header-nav-sp">
           <ul>
@@ -43,6 +57,7 @@
           </ul>
         </nav>
       </div>
+
       <!-- MV -->
       <div class="slider">
         <picture>
@@ -52,21 +67,30 @@
           />
           <img src="./images/pc_first-100.jpg" alt="カフェ店内の様子" />
         </picture>
+        <picture>
+          <source
+            srcset="./images/sp_main_vs_2@2x-100.jpg"
+            media="(max-width: 767px)"
+          />
+          <img src="./images/slider_2.jpg" alt="カフェ店内の様子" />
+        </picture>
       </div>
     </header>
 
     <!-- text area -->
-    <div class="text-container">
-      <div class="text-area">
-        <p class="sub-text-en">Have a happy day From a cup of coffee.</p>
-        <p class="main-text">ハッピーに溢れる1日を</p>
-        <p class="main-text">1杯のコーヒーから。</p>
-        <p class="sub-text-ja">
-          <span>毎日を丁寧に大切に過ごしたい。</span>
-          <span>だからこそ一杯一杯丁寧にコーヒーを入れ</span>
-          <span>足を運んでくれるお客さんには落ち着く空間と</span>
-          <span>こだわりのコーヒーを提供したい。</span>
-        </p>
+    <div class="company-policy">
+      <div class="text-container">
+        <div class="text-area">
+          <p class="sub-text-en">Have a happy day From a cup of coffee.</p>
+          <p class="main-text">ハッピーに溢れる1日を</p>
+          <p class="main-text">1杯のコーヒーから。</p>
+          <p class="sub-text-ja">
+            <span>毎日を丁寧に大切に過ごしたい。</span>
+            <span>だからこそ一杯一杯丁寧にコーヒーを入れ</span>
+            <span>足を運んでくれるお客さんには落ち着く空間と</span>
+            <span>こだわりのコーヒーを提供したい。</span>
+          </p>
+        </div>
       </div>
     </div>
 
@@ -130,10 +154,7 @@
                 class="menu-img"
               />
               <div class="menu-ttl-img">
-                <img
-                  src="./images/drink-txt.png"
-                  alt="ドリンク"
-                />
+                <img src="./images/drink-txt.png" alt="ドリンク" />
               </div>
               <p class="menu-text">
                 ドリンクメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
@@ -147,10 +168,7 @@
                 class="menu-img"
               />
               <div class="menu-ttl-img">
-                <img
-                  src="./images/food-txt.png"
-                  alt="フード"
-                />
+                <img src="./images/food-txt.png" alt="フード" />
               </div>
 
               <p class="menu-text">
@@ -165,10 +183,7 @@
                 class="menu-img"
               />
               <div class="menu-ttl-img">
-              <img
-                src="./images/sweets-txt.png"
-                alt="スイーツ"
-              />
+                <img src="./images/sweets-txt.png" alt="スイーツ" />
               </div>
               <p class="menu-text">
                 スイーツメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
@@ -180,28 +195,30 @@
     </div>
 
     <!-- gallery -->
-    <section class="gallery section" id="gallery">
+    <section class="gallery" id="gallery">
       <h2 class="section-title">
         <img src="./images/gallery@2x.png" alt="ギャラリー" />
       </h2>
-      <div class="gallery-nav">
-        <ul class="gallery-img-list">
-          <li class="gallery-item">
-            <img src="./images/pc_gallary_05-100.jpg" alt="カフェ店内の様子" />
-          </li>
-          <li class="gallery-item">
-            <img src="./images/pc_gallary_04-100.jpg" alt="" />
-          </li>
-          <li class="gallery-item">
-            <img src="./images/pc_gallary_03-100.jpg" alt="" />
-          </li>
-          <li class="gallery-item">
-            <img src="./images/pc_gallary_02-100.jpg" alt="" />
-          </li>
-          <li class="gallery-item">
-            <img src="./images/pc_gallary_01-100.jpg" alt="" />
-          </li>
-        </ul>
+
+      <div class="gallery-list">
+        <div class="gallery-item">
+          <img src="./images/pc_gallary_05-100.jpg" alt="カフェ店内の様子" />
+        </div>
+        <div class="gallery-item">
+          <img src="./images/pc_gallary_04-100.jpg" alt="コーヒー豆" />
+        </div>
+        <div class="gallery-item">
+          <img src="./images/pc_gallary_03-100.jpg" alt="店内の雰囲気" />
+        </div>
+        <div class="gallery-item">
+          <img src="./images/pc_gallary_02-100.jpg" alt="カウンターの雰囲気" />
+        </div>
+        <div class="gallery-item">
+          <img src="./images/pc_gallary_01-100.jpg" alt="ラテアート" />
+        </div>
+        <div class="gallery-item">
+          <img src="./images/pc_gallary_03-100.jpg" alt="店内の雰囲気" />
+        </div>
       </div>
     </section>
 
@@ -280,6 +297,23 @@
     </footer>
 
     <script>
+      // スライダー
+      $(".slider").slick({
+        arrows: false, //サイド 横向き矢印を消す
+        dots: true, //画像の枚数文の点々を出す
+        // autoplay: true, //自動で画像切り替わる
+        // autoplaySpeed: 2000 //2秒ごと
+      });
+
+      $(".gallery-list").slick({
+        sliderToShow: 5,
+        sliderToScroll: 1,
+        arrows: false,
+        autoPlay: true,
+        autoPlaySpeed: 2000,
+      });
+
+      // ハンバーガー
       $(function () {
         $(".sp-menu-btn").on("click", function () {
           $(".sp-menu-btn").toggleClass("open");
